manifests/deployment/production/wf-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: weatherforecast-api-svc
  name: weatherforecast-api-svc
  namespace: weatherforecast-main
spec:
  ports:
    - name: api-port
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: weatherforecast-api
    tier: backend
status:
  loadBalancer: {}
