manifests/deployment/production/wf-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "Server";
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: ingress-weatherforecast-api-main
  namespace: weatherforecast-main
spec:
  ingressClassName: nginx
  rules:
  - host: pdnazure.serviciosit.co
    http:
      paths:
      - backend:
          service:
            name: weatherforecast-api-svc
            port:
              number: 8080
        path: /weatherforecast/(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - pdnazure.serviciosit.co
    secretName: tls-certificate
